librespeed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: librespeed
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: librespeed
    spec:
      imagePullSecrets:
        - name: registrysecret
      containers:
        - name: librespeed
          image: registry.rebrainme.com/workshops/middle/kubernetes-local/newplatform_autochecks/speedtest:5.3
          volumeMounts:
            - name: servers-config
              mountPath: /servers.json
              subPath: servers.json
          ports:
            - containerPort: 80
      volumes:
        - name: servers-config
          configMap:
            name: librespeed-servers
            items:
              - key: servers.json
                path: servers.json
