mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: db
  labels:
    app: db
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: db
